[package]
name = "re0-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
rand = {version = "0.8.5", features = ["small_rng"]}


[dev-dependencies]

[features]
default = []
