[package]
name = "arc-pest"
version = "0.4.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration Parser via Pest"
license = "MPL-2.0"
readme = "../../readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]
pest = "2.1"

[dev-dependencies]
pest_generator = "2.1"
quote = "1.0"
