[package]
name = "re0-pest"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration Parser via Pest"
license = "MPL-2.0"
readme = "../../readme.md"
repository = "https://github.com/oovm/re0-life"
exclude = ["/tests/*"]
edition = "2018"


[dependencies]
log = "0.4.17"
pest = "2.1"

[dev-dependencies]
pest_generator = "2.1"
quote = "1.0"
